<resources>
    <string name="app_name">CSCB07-Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="postCPlus">2.3</string>
    <string name="postC">2.0</string>
    <string name="postCMinus">1.7</string>
    <string name="postDPlus">1.3</string>
    <string name="postD">1.0</string>
    <string name="postDMinus">0.7</string>
    <string name="postF">0.0</string>
    <string name="postnextPage">Next page</string>
    <string name="postDidNotTake">Did not take</string>
    <string name="postA">4.0</string>
    <string name="postAMinus">3.7</string>
    <string name="postBPlus">3.3</string>
    <string name="postB">3.0</string>
    <string name="postBMinus">2.7</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="paragraph">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
    mollit anim id est laborum.</string>

    <string name="back_button">BACK</string>
    <string name="add_button">ADD</string>
    <string name="rsvp_button">RSVP</string>
    <string name="add_event_button">ADD EVENT</string>
    <string name="rating_button">RATING</string>
    <string name="delete_button">DELETE</string>
    <string name="add_announcement_button">ADD ANNOUNCEMENT</string>

    <string name="add_event_title">Add New Event</string>
    <string name="event_details_title">Event Details</string>
    <string name="event_list_title">Events</string>

    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_participantLimit">Participant Limit</string>
    <string name="event_details">About Event</string>

    <string name="name">Name</string>
    <string name="complaint_header">Your Complaint Header</string>
    <string name="complaint_sub_button">Your Complaint Sub Button</string>
    <string name="add_announcement_title">Add New Announcement</string>
    <string name="announcement_details_title">Announcement Details</string>
    <string name="announcement_title">Announcement Title</string>
    <string name="announcement_message">Announcement Message</string>
    <string name="announcement_details">Details</string>
    <string name="create_new_announcement">Create New Announcement</string>
    <string name="announcements">Announcements</string>



    <string name="Admin_Complaints">View All Complaints</string>
    <string name="Admin_Events">List View: All Events</string>
    <string name="event_feedback">Event Feedback</string>


</resources>