<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <!-- Nested Scroll view -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Linear layout to contain 2 text view and button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:id="@+id/random_title"
                android:text="POSt Checker: GPA Info"
                android:textSize="20sp"
                />

            <!-- Add selection bubbles -->
            <TextView
                android:id="@+id/instruction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="Select what your GPA is for each course, otherwise select 'Did not take'."
                android:textSize="15sp" />

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:textStyle="bold"
                android:text="CSCA08"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/answerRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                >

                <RadioButton
                    android:id="@+id/option0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postDidNotTake" />

                <RadioButton
                    android:id="@+id/option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postA" />

                <RadioButton
                    android:id="@+id/option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postAMinus" />

                <RadioButton
                    android:id="@+id/option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postBPlus" />

                <RadioButton
                    android:id="@+id/option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postB" />

                <RadioButton
                    android:id="@+id/option5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postBMinus" />

                <RadioButton
                    android:id="@+id/option6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postCPlus" />

                <RadioButton
                    android:id="@+id/option7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postC" />

                <RadioButton
                    android:id="@+id/option8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postCMinus" />

                <RadioButton
                    android:id="@+id/option9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postDPlus" />

                <RadioButton
                    android:id="@+id/option10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postD" />

                <RadioButton
                    android:id="@+id/option11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postDMinus" />

                <RadioButton
                    android:id="@+id/option12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postF" />

            </RadioGroup>

            <Button
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/postnextPage"
                android:onClick="onClick"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
